# Feishu_Desk_HUD

./: LICENSE  README.md
backend/: .env.example  index.js  package-lock.json  package.json  pyoath.py
firmware/ESP32-S3-ePaper-1.54/: CMakeLists.txt  partitions.csv
firmware/ESP32-S3-ePaper-1.54/main/: CMakeLists.txt  idf_component.yml  main.cpp  mqtt_ca.crt  my_ui.h  ui_font_FontCN16.c
firmware/ESP32-sparkbot/: CMakeLists.txt  partitions.csv
firmware/ESP32-sparkbot/components/bmi270/: app_bmi270.c
firmware/ESP32-sparkbot/main/: CMakeLists.txt  app_main.c  filelist.txt  idf_component.yml  ui.c  ui.h  ui_events.c
firmware/ESP32-sparkbot/main/fonts/: ui_font_FontCN16.c  ui_font_YBPfont.c  ui_font_bigNUM.c
firmware/ESP32-sparkbot/main/images/: ui_img_bg01_png.c  ui_img_bg02_png.c
firmware/ESP32-sparkbot/main/screens/: ui_Screen1.c  ui_Screen1.h  ui_Screen2.c  ui_Screen2.h
